@@ -245,14 +245,14 @@ simplify <- function(graph, remove.multiple=TRUE,
 ##   res
 }
 
-betweenness <- function(graph, v=V(graph), directed=TRUE) {
+betweenness <- function(graph, v=V(graph), directed=TRUE, verbose=igraph.par("verbose")) {
   
   if (!is.igraph(graph)) {
     stop("Not a graph object")
   }
   on.exit( .Call("R_igraph_finalizer", PACKAGE="igraph") )
   .Call("R_igraph_betweenness", graph, as.igraph.vs(v),
-        as.logical(directed),
+        as.logical(directed), as.logical(verbose),
         PACKAGE="igraph")
 }
 
