@@ -1,3 +1,10 @@
+2008-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (betweenness) : added 
+	progress bar support
+	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : added
+	progress bar support
+
 2008-06-24  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
